@startuml

title __AMCWardPanels.TableFrames.Total Package Diagram__\n


    namespace AMCWardPanels {
      namespace TableFrames {
        namespace Total {
          class AMCWardPanels.TableFrames.Total.TotTable {
              + TotTable()
          }
        }
      }
    }

  


    namespace AMCWardPanels {
      namespace TableFrames {
        namespace Total {
          class AMCWardPanels.TableFrames.Total.TotTableModel {
              + TotTableModel()
              + TotTableModel()
              + isCellEditable()
          }
        }
      }
    }

  


    namespace ACWardPanels {
      namespace TableFrames {
        namespace Total {
          class AMCWardPanels.TableFrames.Total.TotTablePanel {
              - columnName : String[]
              - dbData : Object[][]
              - scrollPane : JScrollPane
              - table : JTable
              + TotTablePanel()
              + setupTable()
              + tableChanged()
              - editPatient()
          }
        }
      }
    }

  

  AMCWardPanels.TableFrames.Total.TotTableModel -up-|> AMCWardPanels.TableFrames.MyTableModel
  AMCWardPanels.TableFrames.Total.TotTablePanel .up.|> javax.swing.event.TableModelListener
  AMCWardPanels.TableFrames.Total.TotTablePanel -up-|> javax.swing.JPanel
  AMCWardPanels.TableFrames.Total.TotTablePanel o-- Methods.GeneralWard
  AMCWardPanels.TableFrames.Total.TotTablePanel o-- AMCWardPanels.TableFrames.Total.TotTableModel


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
